https://github.com/OpenPaaS-Suite/esn-frontend-calendar/issues/188: Now the resource autocomplete dropdown is no longer overlapped by the fields below

--- a/src/esn.calendar.libs/app/components/event/form/event-form.less
+++ b/src/esn.calendar.libs/app/components/event/form/event-form.less
@@ -55,6 +55,12 @@ body  {
 
     .cal-user-autocomplete-input {
       tags-input {
+        z-index: 4;
+      }
+    }
+
+    .cal-resource-autocomplete-input {
+      tags-input {
         z-index: 3;
       }
     }
